# tag-pro-online

./: .gitignore  CMakeLists.txt
doc/: manual.typ  readme.txt
include/game/: game.h
include/gui/: start_screen.h
include/network/: network.h  protocol.h
scripts/: build-linux.sh  build-macos.sh  build-windows.bat  build.sh
src/: client.cpp  client.h  game.cpp  game.h  game_screen.cpp  game_screen.h  main.cpp  network.h  player.cpp  player.h  server.cpp  server.h  start_screen.cpp  start_screen.h  style.qss
src/game/: game.cpp  game.h  game_state.h
src/gui/: game_screen.cpp  game_screen.h  start_screen.cpp
src/network/: client.cpp  client.h  network.h  protocol.cpp  protocol.h  server.cpp  server.h
test/: test.typ
